; ModuleID = '/home/carl/AnghaBench/hiredis/extr_async.c_redisAsyncRead.c'
source_filename = "/home/carl/AnghaBench/hiredis/extr_async.c_redisAsyncRead.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }

@REDIS_ERR = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @redisAsyncRead(%struct.TYPE_6__* %0) #0 {
  %2 = alloca %struct.TYPE_6__*, align 8
  %3 = alloca i32*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %2, align 8
  %4 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %4, i32 0, i32 0
  store i32* %5, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i64 @redisBufferRead(i32* %6)
  %8 = load i64, i64* @REDIS_ERR, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %12 = call i32 @__redisAsyncDisconnect(%struct.TYPE_6__* %11)
  br label %18

13:                                               ; preds = %1
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %15 = call i32 @_EL_ADD_READ(%struct.TYPE_6__* %14)
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %17 = call i32 @redisProcessCallbacks(%struct.TYPE_6__* %16)
  br label %18

18:                                               ; preds = %13, %10
  ret void
}

declare dso_local i64 @redisBufferRead(i32*) #1

declare dso_local i32 @__redisAsyncDisconnect(%struct.TYPE_6__*) #1

declare dso_local i32 @_EL_ADD_READ(%struct.TYPE_6__*) #1

declare dso_local i32 @redisProcessCallbacks(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
